# dotfiles

./: .chezmoiexternal.toml  .chezmoiignore  .gitignore  .gitmodules  .homesick_subdir  Makefile  README  README.md  TODO.md  Xdefaults  bash_aliases  bash_functions  bash_profile  bashrc  bootstrap.sh  deploy-dotfiles  dot_Xresources  dot_bash_aliases  dot_bash_functions  dot_bash_profile  dot_bashrc  dot_gitconfig  dot_gitconfig-fpf  dot_gitconfig-pl  dot_gitignore  dot_mrconfig  dot_profile  dot_tmux.conf  dot_tool-versions  dot_vimrc  flake.nix  gemrc  gitconfig  gitignore  install.sh  justfile  liquidpromptrc  packages.sh  packages.txt  parse_git_branch  (+20 more)
dom0/.bashrc.d/: ruindev-qubes-shortcuts.sh  ruindev-sd-dev.sh
dom0/user/: .bash_profile
dot_byobu/: dot_tmux.conf  profile  status
dot_claude/: CLAUDE.md  private_settings.json  settings.json
dot_config/: compton.conf  starship-presentation.toml  starship.toml
dot_config/aichat/: private_config.yaml
dot_config/alacritty/: alacritty.toml  private_alacritty.toml
dot_config/crush/: crush.json
dot_config/direnv/: direnv.toml  direnvrc
dot_config/dunst/: dunstrc
dot_config/fontconfig/: fonts.conf
dot_config/ghostty/: config
dot_config/home-manager/: home.nix
dot_config/i3/: config
dot_config/i3status/: config
dot_config/nitrogen/: bg-saved.cfg  nitrogen.cfg
dot_config/nvim/: init.lua  lazy-lock.json
dot_config/opencode/: config.json
dot_config/rofi/: config.rasi
dot_config/sway/: config
dot_config/vlc/: vlc-qt-interface.conf
dot_config/waybar/: config  style.css
dot_config/zellij/: config.kdl
dot_moc/: config  keymap
dot_screenlayout/: private_executable_pantograph-vertical-petrichor.sh
dot_vim/colors/: sumi.vim
home/: .Xdefaults  .Xmodmap  .bash_aliases  .bash_functions  .bash_profile  .bashrc  .gitconfig  .gitignore  .liquidpromptrc  .tmux.conf  .vimrc  .xinitrc-backup  Xmodmap  gemrc
home/.bin/: add-vim-plugin  ansible-ad-hoc-role  ansible-ad-hoc-task  ansible-ssh  blur_lock  catpic  deploy-dotfiles  format_mac_address  fuzzy-lock  gpg-agent-wrapper  high-dpi  hometunnel  inspec-wrapper  latlong  letmeknow  mag2tor  monitor-setup  monitor_setup  npr_morning_edition  remove_linebreaks  rename-standalone  resume_music  scan_local_ips  ssh-agent-wrapper  timezones  tmux_status  vagrant-remove-old-boxes  vpn  vpn-on  wiretap_archive
home/.gnupg/: gpg-agent.conf  gpg.conf
home/.i3/: config  i3status.conf
home/.moc/: config
i3/: config
moc/: config  last_directory  playlist.m3u
moc/cache/: __db.001  __db.002  __db.003  __db.004  tags.db
private_dot_ssh/: config
tools/: .gitignore  Cargo.toml  README.md  flake.nix
tools/gaming-vids/: .gitignore  Cargo.toml  flake.nix  prompt.md
tools/gaming-vids/src/: main.rs
tools/homelab/: .gitignore  Cargo.toml  flake.nix
tools/homelab/src/: gatus.rs  lib.rs  main.rs  media_mount.rs  repo.rs
tools/ripping-tools/: Cargo.toml  README.md  flake.nix  justfile  manual-split  manual-tag  music-sync  rip-album
tools/ripping-tools/src/: main.rs
vim/: .netrwhist
(+42 files in other folders)
