[workspace]
members = [
    "gaming-vids",
    "homelab",
    "ripping-tools",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
license = "AGPL-3.0-only"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
dialoguer = "0.11"
dirs = "4"
flate2 = "1"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
walkdir = "2"
xshell = "0.2"
