[package]
name = "gaming-vids"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
homelab = { path = "../homelab" }
reqwest = { workspace = true, features = ["blocking", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
xshell.workspace = true
