[package]
name = "homelab"
version = "0.1.0"
edition = "2021"
description = "admin tool for managing homelab infrastructure at ruin.dev"

[lib]
path = "src/lib.rs"

[[bin]]
name = "homelab"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "3"
flate2 = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
walkdir = "2"
xshell = "0.2"
