[package]
name = "homelab"
version.workspace = true
edition = "2021"
description = "admin tool for managing homelab infrastructure at ruin.dev"
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "homelab"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
dialoguer.workspace = true
flate2.workspace = true
reqwest = { workspace = true, default-features = true, features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
walkdir.workspace = true
xshell.workspace = true
